# assistant

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  install.sh  main.cpp  setup  setup.bat  setup.sh
cmake/: StableDiffusionConfig.cmake  helpers.cmake
docker/: Dockerfile  build.sh  compile.sh
forms/: mainwindow.ui
include/core/: DateTime.h  ImageIo.h  algorithms.h  app.h  models.h  structures.h
include/dedup/: ImageDeduplication.h  QImageDeduplication.h
include/face/: IdPhotoCreator.h  Libfacedetection.h  QBackgroundMatting.h  QFaceDetection.h  QLibfacedetection.h
include/hash/: AverageHash.h  DifferenceHash.h  HashAlgorithm.h  PerceptualHash.h  QHashCalculation.h  WaveletHash.h
include/models/: BackgroundMattingModel.h  DeduplicationModel.h  FaceDetectionModel.h  Flux1Dev.h  Flux1Schnell.h  Libfacedetection.h  MobileNetV3Dedup.h  ModNet.h  OrtModel.h  ProgressInterface.h  RetinaFace.h  StableDiffusion35Large.h  StableDiffusion35Medium.h  StableDiffusion3Medium.h  StableDiffusionModel.h  StableDiffusionV15.h  StableDiffusionV21.h  StableDiffusionXl.h  UltraFace.h  YoloFaceLindevs.h  YoloFaceV2.h  Yolov5Face.h  Yolov7Face.h  Yolov8FaceLindevs.h  Yolov9FaceLindevs.h
include/ocr/: QTesseract.h  Tesseract.h
include/qr/: ZxingCpp.h
include/sd/: QStableDiffusion.h
include/ui/: BackendSelectBox.h  Chat.h  CheckBox.h  ImageLabel.h  Line.h  MainWindow.h  Menu.h  MenuItem.h  MessageDialog.h  MessageEdit.h  MessageLabel.h  ModelDialog.h  SelectBox.h  Slider.h  TextBar.h  UploadBar.h  UsernameLabel.h
include/ui/dedup/: Area.h  Settings.h
include/ui/face/: Area.h  Settings.h
include/ui/hash/: Area.h  Settings.h
include/ui/ocr/: Area.h  Settings.h
include/ui/qr/: Area.h  Chat.h  Settings.h
include/ui/sd/: Area.h  Settings.h
include/utils/: DateTime.h  Formatting.h  ImageIo.h  ImgIo.h  ImgProc.h  ImgResize.h  OrtInfo.h  Visualize.h
resources/: resource.qrc
scripts/: Dockerfile  compile.bat  compile.sh
src/core/: DateTime.cpp  ImageIo.cpp
src/dedup/: ImageDeduplication.cpp  QImageDeduplication.cpp
src/face/: IdPhotoCreator.cpp  Libfacedetection.cpp  QBackgroundMatting.cpp  QFaceDetection.cpp  QLibfacedetection.cpp
src/hash/: AverageHash.cpp  DifferenceHash.cpp  PerceptualHash.cpp  QHashCalculation.cpp  WaveletHash.cpp
src/models/: Flux1Dev.cpp  Flux1Schnell.cpp  Libfacedetection.cpp  MobileNetV3Dedup.cpp  ModNet.cpp  OrtModel.cpp  RetinaFace.cpp  StableDiffusion35Large.cpp  StableDiffusion35Medium.cpp  StableDiffusion3Medium.cpp  StableDiffusionModel.cpp  StableDiffusionV15.cpp  StableDiffusionV21.cpp  StableDiffusionXl.cpp  UltraFace.cpp  YoloFaceLindevs.cpp  YoloFaceV2.cpp  Yolov5Face.cpp  Yolov7Face.cpp  Yolov8FaceLindevs.cpp  Yolov9FaceLindevs.cpp
src/ocr/: QTesseract.cpp  Tesseract.cpp
src/qr/: ZxingCpp.cpp
src/sd/: QStableDiffusion.cpp
src/ui/: BackendSelectBox.cpp  Chat.cpp  CheckBox.cpp  ImageLabel.cpp  Line.cpp  MainWindow.cpp  Menu.cpp  MenuItem.cpp  MessageDialog.cpp  MessageEdit.cpp  MessageLabel.cpp  ModelDialog.cpp  SelectBox.cpp  Slider.cpp  TextBar.cpp  UploadBar.cpp  UsernameLabel.cpp
src/ui/dedup/: Area.cpp  Settings.cpp
src/ui/face/: Area.cpp  Settings.cpp
src/ui/hash/: Area.cpp  Settings.cpp
src/ui/ocr/: Area.cpp  Settings.cpp
src/ui/qr/: Area.cpp  Chat.cpp  Settings.cpp
src/ui/sd/: Area.cpp  Settings.cpp
src/utils/: DateTime.cpp  Formatting.cpp  ImageIo.cpp  ImgIo.cpp  ImgProc.cpp  ImgResize.cpp  OrtInfo.cpp  Vizualize.cpp
tests/: CMakeLists.txt
tests/face/: IdPhotoCreator_test.cpp
tests/models/: Libfacedetection_test.cpp  MobileNetV3Dedup_test.cpp  ModNet_test.cpp  RetinaFace_test.cpp  UltraFace_test.cpp  YoloFaceV2_test.cpp  Yolov5Face_test.cpp  Yolov7Face_test.cpp  Yolov8FaceLindevs_test.cpp  Yolov9FaceLindevs_test.cpp
tests/utils/: DateTime_test.cpp  Formatting_test.cpp  ImgProc_test.cpp
